# Shopify_API_Traingin_1

./: .gitignore  README.md
.github/workflows/: rust.yml
docs/: AddToCart_and_GetCheckoutUrl.md  CreateCustomer.md  ListAllProducts.md  References.md
shopify_api_client/: Cargo.toml
shopify_api_client_cli/: Cargo.toml
shopify_api_client_cli/src/: cli.rs  client.rs  main.rs  models.rs  render_templates.rs  schema.graphql
shopify_api_client_cli/src/cli/: cli_steps.rs
shopify_api_client_cli/src/client/: graphql_client.rs  i_client.rs
shopify_api_client_cli/src/graphqls/: cart_buyer_identity_update.graphql  cart_create.graphql  cart_lines_add.graphql  create_customer_access_token.graphql  products_query.graphql  schema.graphql
shopify_api_client_cli/src/models/: account.rs  cart.rs  customer.rs  product.rs  product_list.rs
shopify_api_client_cli/src/render_templates/: render_cart_templates.rs  render_customer_templates.rs  render_products_templates.rs
shopify_api_client_cli/tests/: accountTest.rs  account_test.rs  cart_test.rs  customerTest.rs  customer_test.rs
