[package]
name = "shopify_api_client_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli
clap = { version = "4.0.32", features = ["derive"] }
# Graphql Client
graphql_client = { version ="0.11.0", features = ["reqwest-blocking"] }
# This one enables us to use async operations
tokio = { version = "1.24.1", features = ["full"] }
# Error handling crate
anyhow = "1.0.68"
# Http Client
reqwest = "0.11.13"
# Json serialization and deserialization
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
